# pytorch-examples

./: LICENSE  README.md
large-model-from-scratch/: Makefile  dataloader.py  dataset.py  env.py  model.py  profiler.py  pyproject.toml  run-distributed.sh  run-multigpu.sh  run-single-gpu.sh  train.py  workload.py
megatron-moe-model/: README.md  inference.py  requirements.txt  test_actual_training.py  test_model.py  test_training_metrics.py  train.py
megatron-moe-model/configs/: model_16b.yaml  model_1_3b.yaml  model_70b.yaml  model_7b.yaml
megatron-moe-model/models/: __init__.py  attention.py  model_analysis.py  moe_layer.py  moe_model.py  router.py
megatron-moe-model/scripts/: benchmark.sh  inference_1_3b.sh  train_16b_8gpu.sh  train_70b_16gpu.sh  train_7b_4gpu.sh  train_single_gpu.sh
megatron-moe-model/training/: __init__.py  distributed.py
pytorch-operations/: README.md
small-examples/attention-flavors/: vanilla-attention.py
